# fakewrite

./: .gitignore  Cargo.toml  README.md  main.c  main2.c
src/: logs.rs  main.rs  mylog.rs  operations.rs  tests.rs  ustring.rs
src/syscall/: common.rs  consts.rs  mod.rs  system.rs  ustring.rs  x64.rs
tools/: README.md  c syscalls.yaml  c syscalls.yaml.bak  ctor.rb  gais.rs  make_yaml.py  parse.py  syscalls.html
tools/x64/: c syscalls.yaml
