[package]
name = "fakewrite"
version = "1.0.0"
authors = ["Diegovsky <diegocastro169169@gmail.com>"]
edition = "2018"
build = "build/build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.18"
anyhow = "1.0"
clap = "3.0.0-beta.1"
fern = "0.6"
log = "0.4"

[build-dependencies]
bindgen = "0.55"