[package]
name = "fakewrite"
version = "0.1.0"
authors = ["Diegovsky <diegocastro169169@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.18"
anyhow = "1.0"
clap = "3.0.0-beta.1"
fern = "0.6"
log = "0.4"
libc = "0.2.80"

[build-dependencies]
bindgen = "0.55"
